# Compilerbau

./: .gitignore  README.md  TypeChecker.hs  g1.cf
exercise1/: .gitignore  Makefile  grammar.cf
exercise1/lab1-testsuite-larger/: Makefile  progs-test-lab1.hs
exercise2/: .gitignore  CPP.cf  Interpreter.hs  TypeChecker.hs  good.cc  lab2.hs
exercise2.5/: .gitignore  Codegen.hs  Emit.hs  Makefile  TypeChecker.hs  bad.cc  lab2.hs  lab3.cabal  lab3.hs  stack.yaml  test.cc
exercise2.5/tests/: driver.sh  fail_2.cc  fail_4.cc  fail_7.cc  test_01.cc  test_07.cc  test_08.cc  test_10.cc  test_19.cc  test_2.cc  test_20.cc  test_21.cc  test_23.cc  test_3.cc  test_33.cc  test_4.cc  test_6.cc  test_9.cc
exercise2.5/testsuite/: Makefile  progs-test-lab2.hs
exercise2/testsuite/: progs-test-lab2.hs
exercise4/: .gitignore  CPP.cf  Codegen.hs  Emit.hs  Interpreter.hs  Makefile  Preprocessor.hs  TypeChecker.hs  authors.txt  lab3.cabal  lab3.hs  lab4.cabal  lab4.hs  link.sh  stack.yaml  test.cc
exercise4/tests/: driver.sh  fail_01.cc  test_02.cc  test_03.cc  test_04.cc  test_05.cc  test_10.cc  test_11.cc  test_13.cc  test_14.cc  test_16.cc  test_17.cc  test_18.cc  test_22.cc  test_24.cc  test_25.cc  test_27.cc  test_29.cc  test_31.cc  test_32.cc  test_34.cc  test_m01.cc  test_pp02.cc  test_pp03.cc  test_pp04.cc  test_pp05.cc  test_pp06.cc  test_pp07.cc  test_pp08.cc  test_pp09.cc  test_pp10.cc  test_pp11.cc
exercise4/tests/subdir/: test.h
exercise4/testsuite/: progs-test-lab2.hs
exercise4/testsuite/bad/: bad134.cc  bad135.cc
exercise4/testsuite/good/: good18.cc
(+3 files in other folders)
