name:                lab4
version:             0.0.1.0
synopsis:            Haskell port of LLVM Kaleidoscope tutorial
description:         Port of the Kaleidoscope tutorial for Haskell and LLVM
homepage:            https://github.com/sdiehl/kaleidoscope
license:             MIT
license-file:        LICENSE-MIT
author:              Stephen Diehl
maintainer:          stephen.m.diehl@gmail.com
copyright:           2012 Stephen Diehl
Category:            Compilers
build-type:          Simple
cabal-version:       >=1.10

executable lab4
  default-language:    Haskell2010
  main-is:             lab4.hs
  other-modules:
    AbsCPP
    Codegen
    Emit
    ErrM
    LexCPP
    ParCPP
    PrintCPP
    TypeChecker
    Preprocessor


  build-depends:
      base                 >= 4.7 && <5
    , haskeline            >= 0.7.1.2
    , llvm-hs              >= 4.0.0.0
    , llvm-hs-pure         >= 4.0.0.0
    , parsec               >= 3.1
    , containers           >= 0.4
    , mtl                  >= 2.1.3
    , transformers         >= 0.3.0.0 && < 0.6
    , array
    , text
    , regex-compat
  hs-source-dirs:      .
